# scaling-funicular

./: .dockerignore  .env.example  .env_example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run.sh
etc/: alloy-config.alloy  loki-config.yml  prometheus.yml  tempo-config.yml
etc/grafana/dashboards/: 16110_rev4.json  app-logs.json  app-observability.json  app-traces.json  dashboard.yml
etc/grafana/datasources/: datasources.yml
src/: constants.py  main.py
src/api/: schemas.py
src/api/v1/answers/: handlers.py  helpers.py  prompts.py  routers.py  schemas.py  services.py  tools.py
src/api/v1/healthcheck/: routers.py
src/core/: config.py  exception_handlers.py  instrumentators.py  logger.py
src/db/: caches.py  storages.py
src/tests/: check.py  requirements.txt  train.json
tests/: test_llm_handler.py  test_routers.py  test_safe_execute_code.py  test_security_validator.py  test_services.py
