[project]
name = "scaling-funicular"
version = "0.1.0"
description = "Math API assistant"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "itsdangerous>=2.2.0",
    "mypy>=1.18.2",
    "orjson>=3.11.4",
    "pre-commit>=4.3.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "ruff>=0.14.3",
    "uvicorn>=0.38.0",
]
