[project]
name = "scaling-funicular"
version = "0.1.0"
description = "Math API assistant"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "itsdangerous>=2.2.0",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "openai>=2.7.1",
    "orjson>=3.11.4",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "redis>=7.0.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "requests>=2.32.5",
    "ruff>=0.14.3",
]
